--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.8.2",
     "express": "^4.9.3",
+    "gulp-css-spriter": "^0.4.0",
     "morgan": "^1.1.1",
     "serve-favicon": "^2.0.1"
   },
